--- a/src/main/Resources/application.properties
+++ b/src/main/Resources/application.properties
@@ -2,6 +2,6 @@ server.port= 8888
 #DB configuration
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3308/foodparcel
+spring.datasource.url=jdbc:mysql://localhost:3306/foodparcel?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
